--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,20 @@ services:
 
   db:
     image: mysql:8
+    ports:
+      - 33061:3306
+    environment: 
+      - MYSQL_DATABASE=molfar
+      - MYSQL_USER=molfar
+      - MYSQL_PASSWORD=password
+      - MYSQL_ROOT_PASSWORD=root
     networks: 
       - nginx_network
 
   redis:
     image: "redis:alpine"
+    ports:
+      - 6379:6379
     networks:
       - nginx_network
 
