--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,22 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "description": "A Vue.js project",
+  "version": "1.0.0",
+  "author": "",
+  "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "2.6.11"
+    "vue": "^2.5.11"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -17,14 +25,9 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "sass": "^1.25.0",
-    "sass-loader": "^7.2.0",
-    "vue-loader": "^14.0.0",
+    "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "vuetify": "2.3.4",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^2.9.1",
-    "html-webpack-plugin": "^4.3.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
