--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
+    "vuetify-dialog": "^2.0.9",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
